Make sure ctas are still clickable
Because the image was rotated, it was covering one of the buttons

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -25,6 +25,8 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        position: relative;
+        z-index: 2;
 
         > div {
             display: flex;
